--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    &ThickSpace;
    &bullet;
    &ThickSpace;
-    <a href="#">Tickets and Passes</a>
+    <a href="tickets.html">Tickets and Passes</a>
     &ThickSpace;
     &bullet;
     &ThickSpace;
