--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
 </header>
 <nav>
         
-   <a href="ProjectTwo.html">Home</a>
+  <a href="index.html">Home</a>
+  &ThickSpace;
+  &bullet;
+  &ThickSpace;
+   <a href="tickets.html">Tickets and Passes</a>
    &ThickSpace;
    &bullet;
    &ThickSpace;
-    <a href="tickets.html">Tickets and Passes</a>
-    &ThickSpace;
-    &bullet;
-    &ThickSpace;
-   <a href="#">Events</a>
-   &ThickSpace;
-   &bullet;
-   &ThickSpace;
-   <a href="#">Planning</a>
-   &ThickSpace;
-   &bullet;
-   &ThickSpace;
-    <a href="reviews.html">Reviews</a>
+  <a href="events.html">Events</a>
+  &ThickSpace;
+  &bullet;
+  &ThickSpace;
+
+   <a href="reviews.html">Reviews</a>
  
 </nav>
-<aside><h4><em>Fun facts about Seaside Park</em></h4>
+<aside>
+  <h4>Fun facts about Seaside Park</h4>
 
   <ul>
    <li>The name of the park, Seaside park was suggested to the founder, Henry Doe, by his friend Chloe Dawn.</li> 
-   <li>The park on average sees around 1000 visitors per month!</li> 
+   <li>The park on average sees around 1800 visitors per month!</li> 
    <li>Our most popular ride is Sea Horse Sprint!</li>
    <li>Our most popular gift shop item is our clown fish balloons!</li>
    <li>Henry's favorite ride is High Tide.</li>
+   <li>The attraction that took the longest to construct was Pirate Panic!</li>
+   <li>The attraction that took the least amount of time to construct was Jellyfish Jam!</li>
   
   </ul>
 </aside>
@@ -58,9 +58,9 @@
        Seaside park is an amusement that plays around with the themes of the ocean that it was built in front of.
       We have a variety of rides here at Seaside Park, ranging from a calming ferris wheel to the fast paced roller coasters that thrill seekers love! 
       We also frequently host special events around the park, so there's always something for everybody!
-      <br>
+      <br></p>
       <h4>Have a look at some of our rides!</h4>
-    </p> 
+    
     <div class="gallery">
         <a target="_blank" href="themepark1.png">
           <img src="themepark1.png" alt="High Tide" width="600" height="400">
