--- a/tickets.html
+++ b/tickets.html
@@ -26,31 +26,35 @@
   &ThickSpace;
   &bullet;
   &ThickSpace;
-  <a href="planning.html">Planning</a>
-  &ThickSpace;
-  &bullet;
-  &ThickSpace;
    <a href="reviews.html">Reviews</a>
  
 </nav>
-<aside><h4><em>Fun facts about Seaside Park</em></h4>
-
-  <ul>
-   <li>The name of the park, Seaside park was suggested to the founder, Henry Doe, by his friend Chloe Dawn.</li> 
-   <li>The park on average sees around 1000 visitors per month!</li> 
-   <li>Our most popular ride is Sea Horse Sprint!</li>
-   <li>Our most popular gift shop item is our clown fish balloons!</li>
-   <li>Henry's favorite ride is High Tide.</li>
-  
-  </ul>
+<aside><h4><b>FaQ regarding tickets and passes</b></h4>
+  <p>
+<b>-"If I want to reschedule the day that I visit the park, what should I do?"</b>
+<br>
+-If you'd like to reschedule the day of your visit, contact us through either our email or phone number, found at the bottom of the page.
+<br>
+<br>
+<b> "Will my pearl pass subscription automatically renew upon it's experiation date?"</b>
+<br>
+-No, once your pearl pass expires, you'll have to renew it by simply purchasing it again from our website.
+<br>
+<br>
+<b>"Can I refund my ticket or pass?"</b>
+<br>
+-You may refund tickets as long as you contact us about it before the day of your initially planned visit. Pearl pass subscriptions on the other hand may not be refunded, so please be absolutely certain when purchasing them.
+</p>
 </aside>
-<section><h4>The history of Seaside Park</h4>
+<section><h4><b>About Park tickets</b></h4>
 <p>
-  The construction of Seaside Park began in 1999 and was finished in 2009.
-  The founder, Henry Doe began construction of the park with the goal of creating a unique experience that a variety of people would enjoy.
-  For the first few years of construction, Henry had trouble settling on a name for the park, going through several names such as "Coastermania" and "Coaster Park".
-  The name of the park wasn't settled on until Henry's friend, Chloe Dawn, suggested the name "Seaside Park" to coincide with the location that the park was being built being so close to an ocean.
-  Henry immediately took a liking to the name and later into the creation of the park would also give the names of each ride an oceanic theme to coincide with the parks' name.
+  This page is where you can view information about both our tickets and passes.
+  Purchasing tickets alone is the cheapest way to attend the park, however the passes here on this page all provide a variety of benefits that may significantly improve the experience at Seaside Park.
+  We recommend browsing through all of the options that we offer in order for you to decide which options you believe are the best for your upcoming visit or visits.
+   You may purchase either physical tickets or digital tickets. Physical tickets are delivered to you through your mailing address upon completion of your purchase. 
+   Physical tickets are to be handed in at the entrance to Seaside Park on the day of your visit.
+   Digital tickets on the other hand are delivered to you via your provided email address and may be printed to be used in the same manner as a physical ticket
+    or can be saved as an image to be scanned at the entrance to Seaside Park on the day of your visit.
 </p>
 </section>
 <article>
@@ -113,7 +117,16 @@
           </div>
         </div>
       </div>
+      <img src="normalTicket.png" alt="Normal Ticket" style="width:30%; height:25%; float:right;">
+      <h3>Looking for tickets? Look no further!</h3>
+      <p> Tickets can be purchased here both digitally and physically.
+        
+        You may also purchase multiple tickets at once in case you're looking to purchase tickets for a group.
+       
+        <br>
+<br>
 
+      </p>
 </article>
 <footer>
     <p>Is there any information you didn't find in our site? <a href="mailto:imaginaryemail@sample.com"> Contact us Here! </a></p>
